# uahs

./: README.md  Test.hs  hsau.cabal  uahs.cabal  univalg.cabal  univalg.hs
src/: Test.hs  Test2.hs  TestPicosat.hs  TestVector.hs
src/SetAlg/: Domain.hs  Element.hs  Term.hs
src/SetTh/: Domain.hs  Element.hs  Term.hs
src/UnivAlg/: Array.hs  Array2.hs  Boolean.hs  Boolean2.hs  DiscrMath.hs  DiscrMath2.hs  Index.hs  MyPicosat.hs  SatBuilder.hs  SatSolver.hs  SatSolver2.hs  Semiring.hs  Set.hs  Shape.hs  Tensor.hs
